media/rear-diff/base/deployment.yaml
# rear-diff/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rear-diff
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rear-diff
  template:
    metadata:
      labels:
        app: rear-diff
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsUser: 1005
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: rear-diff-api
        image: 192.168.50.2:5050/media/rear-differential:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts: []
      volumes: []
      imagePullSecrets:
      - name: gitlab-registry
