media/rear-diff/base/service.yaml
# rear-diff/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rear-diff
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30800
  selector:
    app: rear-diff
