media/rear-diff/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rear-diff-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: rear-diff.x81
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rear-diff
                port:
                  number: 8000
